--- a/package.json
+++ b/package.json
@@ -1,1 +1,8 @@
-{}
+{
+  "devDependencies": {
+    "concurrently": "^8.2.1"
+  },
+  "scripts": {
+    "start": "concurrently \"cd backend && npx nodemon server.js\" \"cd frontend && npm start\""
+  }
+}
