--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   },
   "scripts": {
     "start": "concurrently \"cd backend && npx nodemon server.js\" \"cd frontend && npm start\""
+  },
+  "dependencies": {
+    "otplib": "^12.0.1",
+    "qrcode.react": "^3.1.0",
+    "speakeasy": "^2.0.0"
   }
 }
