--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "qrcode": "^1.5.3",
+    "speakeasy": "^2.0.0"
   }
 }
