--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   },
   "scripts": {
     "start": "concurrently \"cd backend && npx nodemon server.js\" \"cd frontend && npm start\""
+  },
+  "dependencies": {
+    "react-google-recaptcha": "^3.1.0"
   }
 }
