update nginx configuration

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,6 +11,8 @@ RUN npm run build
 # Run Nginx
 FROM nginx:latest
 COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/sitgigs.online.crt /etc/ssl/sitgigs.online.crt
+COPY --from=build /app/sitgigs.online.key /etc/ssl/sitgigs.online.key
 EXPOSE 443
 
 # Copy existing nginx config file
