--- a/frontend/nginx/ict3103.conf
+++ b/frontend/nginx/ict3103.conf
@@ -1,7 +1,16 @@
 server {
 	listen 80;
+	server_name sitgigs.online www.sitgigs.online;
+	return 302 https://$server_name$request_uri;
+}
+server {
+	listen 443 ssl;
 	
-	server_name sitgigs.online;
+	server_name sitgigs.online www.sitgigs.online;
+	ssl_certificate /etc/ssl/sitgigs.online.crt;
+	ssl_certificate_key /etc/ssl/sitgigs.online.key;
+	ssl_protocols TLSv1.2;
+
 	
 	location / {
 		root /usr/share/nginx/html;
@@ -11,5 +20,6 @@ server {
 
 	location /api/ {
 		proxy_pass http://backend:3001/;
+		proxy_redirect http:// https://;
 	}
 }
