update to nginx configuration

--- a/frontend/nginx/ict3103.conf
+++ b/frontend/nginx/ict3103.conf
@@ -1,15 +1,10 @@
 server {
-	listen 80;
-	server_name sitgigs.online www.sitgigs.online;
-	return 302 https://$server_name$request_uri;
-}
-server {
 	listen 443 ssl;
 	
 	server_name sitgigs.online www.sitgigs.online;
 	ssl_certificate /etc/ssl/sitgigs.online.crt;
 	ssl_certificate_key /etc/ssl/sitgigs.online.key;
-	ssl_protocols TLSv1.2;
+	ssl_protocols TLSv1.2 TLSv1.3;
 
 	
 	location / {
