--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,16 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
+    "mongoose-field-encryption": "^7.0.1",
     "nodemon": "^3.0.1",
+    "npm": "^10.2.0",
     "qrcode": "^1.5.3",
     "speakeasy": "^2.0.0"
   }
