--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,23 @@ services:
       - "443:443"
     depends_on:
       - backend
+      
+  jenkins:
+    build: .
+    image: jenkins/jenkins:lts
+    restart: always
+    privileged: true
+    user: root
+    ports:
+      - 8080:8080
+      - 50000:50000
+    container_name: jenkins
+    volumes:
+      - jenkins-docker-certs:/certs/client
+      - jenkins-data:/var/jenkins_home
+      - .:/var/jenkins_home/tmp
+
+volumes:
+  jenkins-docker-certs:
+  jenkins-data:
     
