--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,7 @@ services:
     environment:
       - DOCKER_CERT_PATH=/certs/client
       - DOCKER_TLS_VERIFY=1
+      - JENKINS_HTTPS_KEYSTORE=/var/jenkins_home/gitrepo/jenkins/ssl
 
 volumes:
   jenkins-docker-certs:
