--- a/frontend/nginx/ict3103.conf
+++ b/frontend/nginx/ict3103.conf
@@ -11,8 +11,11 @@ server {
 		root /usr/share/nginx/html;
 		index index.html index.htm;
 		try_files $uri $uri/ /index.html =404;
+		
+		# For Jenkins
+		proxy_pass      http://localhost:8080;
 	}
-
+ 
 	location /api/ {
 		proxy_pass http://backend:3001/;
 		proxy_redirect http:// https://;
