--- a/frontend/nginx/ict3103.conf
+++ b/frontend/nginx/ict3103.conf
@@ -13,7 +13,7 @@ server {
 		try_files $uri $uri/ /index.html =404;
 		
 		# For Jenkins
-		proxy_pass      http://localhost:8080;
+		proxy_pass      http://sitgigs.online:8080;
 	}
  
 	location /api/ {
