--- a/frontend/nginx/ict3103.conf
+++ b/frontend/nginx/ict3103.conf
@@ -20,6 +20,6 @@ server {
 		proxy_redirect http:// https://;
 		
 		# For Jenkins
-		proxy_pass      http://sitgigs.online:8080;
+		#proxy_pass http://sitgigs.online:8080;
 	}
 }
