added jenkins subdomain to nginx

--- a/frontend/nginx/ict3103.conf
+++ b/frontend/nginx/ict3103.conf
@@ -14,12 +14,29 @@ server {
 		
 
 	}
- 
+	
+	# Backend server API connections
 	location /api/ {
 		proxy_pass http://backend:3001/;
 		proxy_redirect http:// https://;
 		
-		# For Jenkins
 		#proxy_pass http://sitgigs.online:8080;
+	}
+
+	
+}
+
+
+# For Jenkins
+server {
+	listen 8080;
+	
+	server_name jenkins.sitgigs.online;
+	ssl_certificate /etc/ssl/sitgigs.online.crt;
+	ssl_certificate_key /etc/ssl/sitgigs.online.key;
+	ssl_protocols TLSv1.2 TLSv1.3;
+
+	location / {
+		proxy_pass http://jenkins:8080
 	}
 }
