update jenkins record in nginx

--- a/frontend/nginx/ict3103.conf
+++ b/frontend/nginx/ict3103.conf
@@ -29,7 +29,7 @@ server {
 
 # For Jenkins
 server {
-	listen 8080;
+	listen 443;
 	
 	server_name jenkins.sitgigs.online;
 	ssl_certificate /etc/ssl/sitgigs.online.crt;
@@ -37,6 +37,6 @@ server {
 	ssl_protocols TLSv1.2 TLSv1.3;
 
 	location / {
-		proxy_pass http://jenkins:8080
+		proxy_pass http://jenkins:8080;
 	}
 }
