update nginx reverse_proxy for jenkins

--- a/frontend/nginx/ict3103.conf
+++ b/frontend/nginx/ict3103.conf
@@ -20,7 +20,6 @@ server {
 		proxy_pass http://backend:3001/;
 		proxy_redirect http:// https://;
 		
-		#proxy_pass http://sitgigs.online:8080;
 	}
 
 	
@@ -38,5 +37,8 @@ server {
 
 	location / {
 		proxy_pass http://jenkins:8080;
+		proxy_redirect jenkins:8080/ jenkins.sitgigs.online;
+
+		proxy_set_header X-Forwarded-Host $host;
 	}
 }
