--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "react-google-recaptcha": "^3.1.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
